[gd_scene load_steps=5 format=2]

[ext_resource path="res://Content/Scripts/Props/Harmful_Projectile.gd" type="Script" id=1]

[sub_resource type="SphereMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="SphereShape" id=3]

[node name="Harmful_Projectile" type="Area"]
transform = Transform( 0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0, 0, 0 )
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 3 )

[node name="ProjectileTimer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="body_entered" from="." to="." method="_on_Harmful_Projectile_body_entered"]
[connection signal="timeout" from="ProjectileTimer" to="." method="_on_ProjectileTimer_timeout"]
